fixed the text for recipe steps to wrap around the checkbox target

--- a/src/app/recipe/recipe.page.scss
+++ b/src/app/recipe/recipe.page.scss
@@ -24,9 +24,7 @@ img {
 }
 
 .smoll-col {
-  // set the column size to a set pixel size,
-  // instead of percent
-  flex: 0 0 100px;
+  width: 110px;
 }
 
 .spacer-col {
